--- a/roles/passbolt/handlers/main.yml
+++ b/roles/passbolt/handlers/main.yml
@@ -8,3 +8,18 @@
   service:
     name: firewalld
     state: restarted
+
+- name: restart nginx
+  service:
+    name: nginx
+    state: restarted
+
+- name: reload nginx
+  service:
+    name: nginx
+    state: reloaded
+
+- name: restart php-fm
+  service:
+    name: php-fm
+    state: restarted
