--- a/roles/passbolt/vars/main.yml
+++ b/roles/passbolt/vars/main.yml
@@ -9,33 +9,10 @@ mariadb_socket: /var/lib/mysql/mysql.sock
 
 mariadb_config_network: /etc/my.cnf.d/network.cnf
 mariadb_config_server: /etc/my.cnf.d/server.cnf
-mariadb_root_password: Passw0rd_f4r_Maria
-mariadb_databases: [passbolt]
-mariadb_version: 10.2
-mariadb_innodb_buffer_pool_instances: 8
-mariadb_innodb_buffer_pool_size:  384M
-mariadb_innodb_file_format: Barracuda
-mariadb_innodb_file_format_check: 1
-mariadb_innodb_file_per_table: ON
-mariadb_innodb_flush_log_at_trx_commit: 1
-mariadb_innodb_log_buffer_size: 16M
-mariadb_innodb_log_file_size: 48M
-mariadb_innodb_strict_mode: ON
-mariadb_join_buffer_size: 128K
-mariadb_log_warnings: 1
-mariadb_long_query_time: 10
-mariadb_max_allowed_packet: 16M
-mariadb_max_connections: 505
-mariadb_max_heap_table_size: 16M
-mariadb_max_user_connections: 500
-mariadb_port: 3306
-mariadb_query_cache_size: 0
-mariadb_read_buffer_size: 128K
-mariadb_read_rnd_buffer_size: 256k
-mariadb_skip_name_resolve: 1
-mariadb_slow_query_log: 0
-mariadb_sort_buffer_size: 2M
-mariadb_table_definition_cache: 1400
-mariadb_table_open_cache: 2000
-mariadb_table_open_cache_instances: 8
-mariadb_tmp_table_size: 16M
+
+# # Variables for gpg batch file:
+# key-type: RSA
+# key-length: 2048
+# expire-date: 0
+# name-real: Passbolt Server
+# name-email: email@passbolt.server
